Fix header spacing

--- a/stylesheets/custom.scss
+++ b/stylesheets/custom.scss
@@ -41,9 +41,9 @@ body {
   font-size: 2em;
   font-weight: 700;
   position: relative;
-  background: rgba(255, 255, 255, 0.2);
+  // background: rgba(255, 255, 255, 0.2);
   border-radius: 5px;
-  padding-bottom: 20px;
+  padding: 3em 0 4em;
 }
 
 // #top-header h1 {
@@ -56,8 +56,7 @@ body {
 #top-header h1 {
   // font-size: 2em;
   color: white;
-  margin-top: 30px;
-  padding: 0.5em;
+  padding: 0.25em;
   text-transform: uppercase;
   letter-spacing: .35em;
   // display: inline-block;
@@ -71,7 +70,7 @@ body {
 
 #top-header h1 span {
   font: "Open Sans", sans-serif;
-  font-size: 3em;
+  font-size: 2.5em;
   letter-spacing: 0;
   // padding: .25em 0 .325em;
 
@@ -156,11 +155,12 @@ h3.title:hover {
 div.back-to-top {
   float: right;
   margin: 20px;
+  color: #fff;
 }
 
 span.top {
   cursor: pointer;
-  color: #000;
+  color: #fff;
   float: right;
   margin-left: 5px;
 }
